The default for <customprefix:depriv> is "yes".

--- a/docs/3/modules/customprefix.yml
+++ b/docs/3/modules/customprefix.yml
@@ -47,7 +47,7 @@ configuration:
   - name: depriv
     type: Boolean
     required: false
-    default: null
+    default: 'Yes'
     description: |-
       Whether a user with this prefix mode can remove it from themself.
   - name: change
