Fix the connect class inheritance examples.
Closes #178.

--- a/docs/4/configuration/_connect.yml
+++ b/docs/4/configuration/_connect.yml
@@ -160,6 +160,7 @@ example: |-
   ```xml
   <connect name="Secure"
            parent="Main"
+           allow="*"
            port="6697">
 
   <connect name="Main"
