"link" tag requires "port" attribute for IP links
Signed-off-by: Thomas Deutschmann <whissi@whissi.de>

--- a/docs/3/modules/spanningtree.yml
+++ b/docs/3/modules/spanningtree.yml
@@ -101,7 +101,7 @@ configuration:
     required: false
     default: null
     description: |-
-      If defined then the TCP port to connect to this server on.
+      *Required for TCP/IP links!* The port that this server connects on.
   - name: recvpass
     type: Text
     required: true
