Use NORMAL security in the ssl_gnutls example profiles.
Apparently with very new GnuTLS using a priority string this strict
will cause problems with connecting for some clients.

--- a/docs/3/modules/ssl_gnutls.yml
+++ b/docs/3/modules/ssl_gnutls.yml
@@ -157,7 +157,7 @@ configuration:
                 keyfile="key.pem"
                 mindhbits="1024"
                 outrecsize="2048"
-                priority="SECURE192"
+                priority="NORMAL"
                 requestclientcert="yes"
                 strictpriority="no">
     ```
