--- a/docs/4/modules/ssl_gnutls.yml
+++ b/docs/4/modules/ssl_gnutls.yml
@@ -153,7 +153,7 @@ configuration:
                 keyfile="key.pem"
                 mindhbits="1024"
                 outrecsize="2048"
-                priority="SECURE192"
+                priority="NORMAL"
                 requestclientcert="yes"
                 strictpriority="no">
     ```
