--- a/docs/4/configuration/_connect.yml
+++ b/docs/4/configuration/_connect.yml
@@ -139,7 +139,7 @@ attributes:
   required: false
   default: 'No'
   description: |-
-    Whether users in this class are connecting from a shared host and can be uniquely identified by their username (ident).
+    Whether users in this class are connecting from a shared host and can be uniquely identified by their username.
 details: |+
   !!! warning ""
       The `hash` field is currently optional but will be required in the next major version of InspIRCd when using password authentication.
