--- a/docs/4/modules/ident.yml
+++ b/docs/4/modules/ident.yml
@@ -1,7 +1,7 @@
 name: ident
 
 description: |-
-  This module allows the usernames (idents) of users to be looked up using the [RFC 1413 Identification Protocol](https://www.ietf.org/rfc/rfc1413.txt). This mostly not necessary but can be useful for shared hosts where many users may be connecting from one IP address as it allows you to ban specific users without banning the entire provider.
+  This module allows the usernames of users to be looked up using the [RFC 1413 Identification Protocol](https://www.ietf.org/rfc/rfc1413.txt). This mostly not necessary but can be useful for shared hosts where many users may be connecting from one IP address as it allows you to ban specific users without banning the entire provider.
 
 configuration:
 - name: connect
@@ -14,16 +14,16 @@ configuration:
     required: false
     default: 'Yes'
     description: |-
-      Whether users in this connect class should have their usernames (idents) looked up.
+      Whether to try to look up the real username of users in this class using the RFC 1413 identification protocol.
   - name: requireident
     type: Boolean
     required: false
     default: 'No'
     description: |-
-      Whether users must have responded to a username (ident) lookup to be assigned to this class.
+      Whether users must have responded to a ident lookup to be assigned to this class.
   details: ""
   example: |-
-    Disables username (ident) lookups for users in the WebChat class:
+    Disables ident lookups for users in the WebChat class:
 
     ```xml
     <connect name="WebChat"
@@ -31,7 +31,7 @@ configuration:
              useident="no">
     ```
 
-    Requires users connecting from 192.0.2.0/24 to respond to username (ident) lookups to be assigned to the BNC class:
+    Requires users connecting from 192.0.2.0/24 to respond to ident lookups to be assigned to the BNC class:
 
     ```xml
     <connect name="BNC"
@@ -48,13 +48,13 @@ configuration:
     required: false
     default: 'No'
     description: |-
-      Whether to prefix the usernames (idents) of users in classes with ident lookups disabled.
+      Whether to prefix the usernames of users in classes with ident lookups disabled.
   - name: timeout
     type: Duration
     required: false
     default: 5s
     description: |-
-      The duration to timeout username (ident) lookups after.
+      The duration to timeout ident lookups after.
   details: ""
   example: |-
     ```xml
