--- a/docs/4/modules/passforward.yml
+++ b/docs/4/modules/passforward.yml
@@ -36,7 +36,7 @@ configuration:
     %nick%         | The nickname of the connecting user.
     %nickrequired% | The nickname of the user that must be online for a `/PASS` password to be forwarded.
     %pass%         | The password sent by the connecting user using the `/PASS` command.
-    %user%         | The username (ident) of the connecting user.
+    %user%         | The username of the connecting user.
 
   example: |-
     ```xml
