--- a/docs/4/modules/services.yml
+++ b/docs/4/modules/services.yml
@@ -3,6 +3,30 @@ name: services
 description: |-
   This module provides support for integrating with a services server.
 
+configuration:
+- name: services
+  description: |-
+    The `<services>` tag defines settings about how the services module should behave. This tag can only be defined once.
+  attributes:
+  - name: accountoverrideshold
+    type: Boolean
+    required: false
+    default: 'No'
+    description: |-
+      Whether a user who is logged into a services account can override a SVSHOLD on a nickname in their group.
+  - name: disablemodes
+    type: Boolean
+    required: false
+    default: 'No'
+    description: |-
+      Whether channel mode `r` (registered) and user mode `r` (u_registered) are disabled. These modes are deprecated but may be required by older services software.
+  details: ""
+  example: |-
+    ```xml
+    <services accountoverrideshold="yes"
+              disablemodes="no">
+    ```
+
 chmodes:
   chars:
   - name: c_registered
