--- a/docs/3/configuration/_log.yml
+++ b/docs/3/configuration/_log.yml
@@ -5,7 +5,7 @@ attributes:
 - name: method
   type: Text
   required: false
-  default: null
+  default: file
   description: |-
     The method to use for storing logs.
 - name: type
