--- a/docs/4/configuration/_bind.yml
+++ b/docs/4/configuration/_bind.yml
@@ -19,7 +19,7 @@ attributes:
   required: false
   default: '0'
   description: |-
-    *IP listeners only!* The number of seconds to defer a connection for whilst waiting for it to send data (not supported on Windows).
+    *IP listeners only!* The period to defer a connection for whilst waiting for it to send data (not supported on Windows).
 - name: hook
   type: Text
   required: false
