--- a/docs/4/configuration/_connect.yml
+++ b/docs/4/configuration/_connect.yml
@@ -23,7 +23,7 @@ attributes:
 - name: commandrate
   type: Number
   required: false
-  default: null
+  default: '1000'
   description: |-
     The number of millicommands (1000 equals 1 command) per second that a user can execute.
 - name: connected
@@ -41,9 +41,9 @@ attributes:
 - name: globalmax
   type: Number
   required: false
-  default: null
+  default: '0'
   description: |-
-    The maximum number of users who can exist on the entire network from the range specified in the allow field.
+    The maximum number of clones per host (see [`<cidr>`](#cidr)) that can be on the entire network for users in this connect class. Set to 0 for no limit.
 - name: hardsendq
   type: Number
   required: false
@@ -53,19 +53,19 @@ attributes:
 - name: limit
   type: Number
   required: false
-  default: null
+  default: '5000'
   description: |-
     The maximum number of users who can be in this connect class.
 - name: localmax
   type: Number
   required: false
-  default: null
+  default: '0'
   description: |-
-    The maximum number of users who can exist on the local server from the range specified in the allow field.
+    The maximum number of clones per host (see [`<cidr>`](#cidr)) that can be on the local server for users in this connect class. Set to 0 for no limit.
 - name: maxchans
   type: Number
   required: false
-  default: null
+  default: '20'
   description: |-
     If defined then the maximum number of channels that a user in this class can be in.
 - name: maxconnwarn
@@ -91,7 +91,7 @@ attributes:
   required: false
   default: 2m
   description: |-
-    The number of seconds this client can be idle for before sending it a `PING` message.
+    The period this client can be idle for before sending it a `PING` message.
 - name: port
   type: Number
   required: false
@@ -133,7 +133,7 @@ attributes:
   required: false
   default: 1m30s
   description: |-
-    The number of seconds after which a partially connected user is timed out.
+    The period after which a partially connected user is timed out.
 - name: uniqueusername
   type: Boolean
   required: false
@@ -173,7 +173,7 @@ example: |-
            localmax="3"
            maxchans="30"
            maxconnwarn="no"
-           pingfreq="120"
+           pingfreq="2m"
            recvq="8K"
            resolvehostnames="yes"
            softsendq="8192"
