--- a/docs/4/modules/cloak_sha256.yml
+++ b/docs/4/modules/cloak_sha256.yml
@@ -61,7 +61,7 @@ configuration:
   - name: psl
     type: Text
     required: false
-    default: 1
+    default: null
     description: |-
       If defined and the module was built against libpsl then the path to a Public Suffix List database to use instead of `<cloak:hostparts>` for finding the public part of a hostname. Can also be set to `system` to use the system database.
   - name: class
