--- a/docs/3/configuration/_connect.yml
+++ b/docs/3/configuration/_connect.yml
@@ -80,6 +80,12 @@ attributes:
   default: null
   description: |-
     The password that the user must send to be put into this connect class.
+- name: hash
+  type: Text
+  required: false
+  default: null
+  description: |-
+    If defined then the hash algorithm that the password field is hashed with.
 - name: pingfreq
   type: Duration
   required: false
