Use a v4-style extban on the v4 extban table.

--- a/docs/3/modules/allowinvite.yml
+++ b/docs/3/modules/allowinvite.yml
@@ -19,7 +19,7 @@ extbans:
   - name: blockinvite
     char: A
     type: Acting
-    syntax: A:<mask>
+    syntax: <mask>
     description: Bans &lt;mask&gt; from using the `/INVITE` command.
   example:
   - description: |-
