--- a/docs/3/modules/services_account.yml
+++ b/docs/3/modules/services_account.yml
@@ -77,12 +77,12 @@ extbans:
   - name: account
     char: R
     type: Matching
-    syntax: R:<pattern>
+    syntax: <pattern>
     description: Checks whether users are logged into a services account matching &lt;pattern&gt;.
   - name: unauthed
     char: U
     type: Matching
-    syntax: U:<pattern>
+    syntax: <pattern>
     description: Checks whether users matching &lt;pattern&gt; are *not* logged into a services account.
   example:
   - description: |-
