--- a/docs/3/modules/blockcaps.yml
+++ b/docs/3/modules/blockcaps.yml
@@ -67,7 +67,7 @@ extbans:
   - name: blockcaps
     char: B
     type: Acting
-    syntax: B:<mask>
+    syntax: <mask>
     description: Bans &lt;mask&gt; from sending messages with excessive capitalisation.
   example:
   - description: |-
