--- a/docs/3/modules/cgiirc.yml
+++ b/docs/3/modules/cgiirc.yml
@@ -160,7 +160,7 @@ extbans:
   - name: gateway
     char: w
     type: Matching
-    syntax: w:<pattern>
+    syntax: <pattern>
     description: "[**New in v3.10.0!**](/3/change-log/#inspircd-3100) Matches against the name of the gateway that WebIRC users are connecting from."
 example:
 - description: |-
