--- a/docs/3/modules/nokicks.yml
+++ b/docs/3/modules/nokicks.yml
@@ -20,7 +20,7 @@ extbans:
   - name: nokick
     char: Q
     type: Acting
-    syntax: Q:<mask>
+    syntax: <mask>
     description: Bans privileged users matching &lt;mask&gt; from using the `/KICK` command.
   example:
   - description: |-
