--- a/docs/4/modules/sslmodes.yml
+++ b/docs/4/modules/sslmodes.yml
@@ -31,7 +31,7 @@ extbans:
   - name: sslfp
     char: z
     type: Matching
-    syntax: z:<pattern>
+    syntax: <pattern>
     description: Checks whether users have a TLS (SSL) client certificate with a fingerprint matching &lt;pattern&gt;.
   example:
   - description: |-
